Bug 110440 - FILOPEN: XSLX attribute "invisible" is ignored for a group of shapes
Summary: FILOPEN: XSLX attribute "invisible" is ignored for a group of shapes
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: filters and storage (show other bugs)
Version:
(earliest affected)
4.3 all versions
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:6.0.0 target:5.4.1
Keywords: bibisected, bisected, regression
: 110439 (view as bug list)
Depends on:
Blocks:
 
Reported: 2017-07-30 14:25 UTC by Regina Henschel
Modified: 2017-08-10 12:57 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Hidden group of shapes (11.05 KB, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet)
2017-07-30 14:25 UTC, Regina Henschel
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Regina Henschel 2017-07-30 14:25:20 UTC
Created attachment 135001 [details]
Hidden group of shapes

Open attached xslx-document. It contains a group of rectangles. In this group the shape "myRed" is set to be invisible. And the group itself is set to be invisible.

On opening, the group is visible, only the shape "myRed" is invisible.
Comment 1 raal 2017-07-31 14:57:47 UTC
This seems to have begun at the below commit.
Adding Cc: to Miklos Vajna ; Could you possibly take a look at this one?
Thanks


commit 49da31f93b415946d3df89d5b2955d83303156e8
Author: Matthew Francis <mjay.francis@gmail.com>
Date:   Thu May 28 20:52:45 2015 +0800

    source-hash-527440c9d9086ae01c277b0dca96a87eb0868ae6
    
    commit 527440c9d9086ae01c277b0dca96a87eb0868ae6
    Author:     Miklos Vajna <vmiklos@collabora.co.uk>
    AuthorDate: Fri Apr 4 10:11:33 2014 +0200
    Commit:     Miklos Vajna <vmiklos@collabora.co.uk>
    CommitDate: Fri Apr 4 10:13:29 2014 +0200
    
        oox: fix a few bogus SAL_WARN
    
        The idea is that when an element is unhandled, it's either unhandled
        explicitly by an empty "case..break" block (so grep can quickly find it)
        or we raise a warning. Add a few placeholders for cases that we won't
        probably handle better in the near future to silence warnings.
    
        Change-Id: I41dec7802c4671550130393b4f98a8f0d8dfc059
Comment 2 raal 2017-07-31 16:15:58 UTC
*** Bug 110439 has been marked as a duplicate of this bug. ***
Comment 3 Miklos Vajna 2017-08-03 13:14:02 UTC
I'll take this.
Comment 4 Commit Notification 2017-08-08 07:15:41 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=a3c695c12386c2708a0c06ec0ccd42ee2b8aeb98

tdf#110440 drawingML import: fix handling of group shape properties

It will be available in 6.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2017-08-10 12:57:04 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-5-4":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=db47b53bcd758a5e403d31642f7574f441ca739e&h=libreoffice-5-4

tdf#110440 drawingML import: fix handling of group shape properties

It will be available in 5.4.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.