tdf#110440 drawingML import: fix handling of group shape properties

The handler for nvGrpSpPr is "this class", not "no class".

Change-Id: I7fc40681d77f94b7473d2f677d813d2ae246f6ac