sc/qa/unit/subsequent_filters-test.cxx
@@ -240,6 +240,7 @@ public:
     void testTdf100458();
     void testTdf100709XLSX();
     void testTdf97598XLSX();
+    void testTdf110440XLSX();
 
     void testPageScalingXLSX();
     void testActiveXCheckboxXLSX();
@@ -367,6 +368,7 @@ public:
     CPPUNIT_TEST(testTdf100458);
     CPPUNIT_TEST(testTdf100709XLSX);
     CPPUNIT_TEST(testTdf97598XLSX);
+    CPPUNIT_TEST(testTdf110440XLSX);
 
     CPPUNIT_TEST(testPageScalingXLSX);
     CPPUNIT_TEST(testActiveXCheckboxXLSX);
@@ -3786,6 +3788,25 @@ void ScFiltersTest::testColumnStyle2XLSX()
         OUString aName = rFont.GetFamilyName();
         CPPUNIT_ASSERT_EQUAL(OUString("Linux Biolinum G"), aName);
     }
+
+    xDocSh->DoClose();
+}
+
+void ScFiltersTest::testTdf110440XLSX()
+{
+    ScDocShellRef xDocSh = loadDoc("tdf110440.", FORMAT_XLSX);
+    CPPUNIT_ASSERT_MESSAGE("Failed to open doc", xDocSh.is());
+
+    uno::Reference<frame::XModel> xModel = xDocSh->GetModel();
+    uno::Reference<sheet::XSpreadsheetDocument> xDoc(xModel, uno::UNO_QUERY_THROW);
+    uno::Reference<container::XIndexAccess> xIA(xDoc->getSheets(), uno::UNO_QUERY_THROW);
+    uno::Reference<drawing::XDrawPageSupplier> xDrawPageSupplier(xIA->getByIndex(0), uno::UNO_QUERY_THROW);
+    xIA.set(xDrawPageSupplier->getDrawPage(), uno::UNO_QUERY_THROW);
+    uno::Reference<beans::XPropertySet> xShape(xIA->getByIndex(0), uno::UNO_QUERY_THROW);
+    bool bVisible = true;
+    xShape->getPropertyValue("Visible") >>= bVisible;
+    // This failed: group shape's hidden property was lost on import.
+    CPPUNIT_ASSERT(!bVisible);
 
     xDocSh->DoClose();
 }
